<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingPage.SettingsPage">

    <TextView
        android:id="@+id/textViewMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/settings"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        android:background="@drawable/rounded_recycler_land_background"
        app:layout_constraintTop_toTopOf="@id/textViewMainTitle"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:id="@+id/text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp"
            android:background="@drawable/rounded_recycler_land_background">

            <TextView
                android:id="@+id/textViewOption1"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:textSize="16sp"
                android:text="@string/lbs_or_kg"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone"
                android:onClick="onOptionClick" />

            <TextView
                android:id="@+id/textViewOption2"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:textSize="16sp"
                android:text="@string/reset_workout"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onOptionClick" />

            <TextView
                android:id="@+id/textViewOption3"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:textSize="16sp"
                android:text="@string/logout"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onOptionClick" />

            <TextView
                android:id="@+id/textViewOption4"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:textSize="16sp"
                android:text="@string/delete_account"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onOptionClick" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/BottomNavigationViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_nav_background"
        android:outlineSpotShadowColor="@color/black"
        app:elevation="32dp"
        app:itemIconTint="@color/bottom_nav_item_color"
        app:itemTextColor="@color/bottom_nav_item_color"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav"/>
</androidx.constraintlayout.widget.ConstraintLayout>