<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConversionPage"
    >

    <TextView
        android:id="@+id/titleText"
        android:fontFamily="@font/nunito_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_converter"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="52dp"/>

    <FrameLayout
        android:id="@+id/inputContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/converter_round"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="32dp"
        app:elevation="32dp"
        android:layout_marginTop="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="106dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:id="@+id/lbsInput"
                android:fontFamily="@font/nunito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_weight_in_lbs"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/kgInput"
                android:fontFamily="@font/nunito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_weight_in_kg"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/convertButton"
                android:fontFamily="@font/nunito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/convert"
                android:backgroundTint="#FF6200EE"
                android:textColor="#FFFFFF"
                android:layout_marginTop="20dp"
                android:elevation="4dp"/>

            <TextView
                android:id="@+id/resultText"
                android:fontFamily="@font/nunito_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#000000"
                app:layout_constraintTop_toBottomOf="@id/convertButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
                android:layout_marginTop="16dp"
                android:visibility="gone" />
        </LinearLayout>
    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:fontFamily="@font/nunito"
        style="@style/BottomNavigationViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_nav_background"
        android:outlineSpotShadowColor="@color/black"
        app:elevation="32dp"
        app:itemIconTint="@color/bottom_nav_item_color"
        app:itemTextColor="@color/bottom_nav_item_color"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav"/>
</androidx.constraintlayout.widget.ConstraintLayout>